Add handlers for getting/creating restaurants
Plus a Dockerfile, introducing GORM for talking to the database, and a
few other stylistic changes.
